--- a/package.json
+++ b/package.json
@@ -8,16 +8,16 @@
     "build": "next build",
     "dev": "next dev",
     "export": "next export",
-    "format": "yarn lint --fix",
-    "format:no-path": "yarn lint:no-path --fix",
+    "format": "npm lint --fix",
+    "format:no-path": "npm lint:no-path --fix",
     "lint": "eslint .",
     "lint:no-path": "eslint",
     "start": "next start -p ${PORT:=3000}",
     "prepare": "husky install"
   },
   "lint-staged": {
-    "**/*.js": "yarn format:no-path",
-    "**/*.scss": "yarn prettier --write"
+    "**/*.js": "npm format:no-path",
+    "**/*.scss": "npm prettier --write"
   },
   "dependencies": {
     "@apollo/client": "^3.6.9",
